fix error of subscribe field overlapping the elements above it

--- a/www/static/styles.css
+++ b/www/static/styles.css
@@ -181,7 +181,7 @@ nav.navigation ul li a:hover, nav.navigation ul li a.active{
 }
 .purple-shade{
 	background-color: #d7ded7;
-	margin: 31px auto;
+	margin: 183px auto 20px;
 }
 .circle{
 	background-image: url(../images/nodes_transparent.png); 
